Updated fonts to Lato, fixed spacing and location issue in header

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 /*Phone*/
 .liam {
-  font-family: 'Merriweather', serif;
+  font-family: 'Lato', sans-serif;
   background-color: #435784;
   padding-left: 20px;
   padding-right: 20px;
@@ -15,9 +15,9 @@
   text-align: center;  
 }
 .links {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 30px;
-  font-weight: normal;
+  font-weight: 300;
 }
 
 .padding {
@@ -36,14 +36,14 @@
 }
 
 .h1 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: bolder;
   color: #C58A59;
   font-size: 60px;
 }
 
 .h2 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: black;
   font-size: 20px;
 }
@@ -51,7 +51,7 @@
 .h3 {
   color: rgb(94, 93, 93);
   font-size: 40px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 300;
   padding-left: 0px;
   margin-top: 0px;
@@ -61,7 +61,7 @@
 .h4 {
   color: rgb(94, 93, 93);
   font-size: 40px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 300;
   margin-top: 20px;
 }
@@ -261,7 +261,7 @@ a:hover {
 /*Tablet*/
 @media (min-width: 768px) { 
   .liam {
-    font-family: 'Merriweather', serif;
+    font-family: 'Lato', serif;
     background-color: #435784;
     padding-left: 20px;
     padding-right: 20px;
@@ -275,7 +275,7 @@ a:hover {
     text-align: center;  
   }
   .links {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 30px;
     font-weight: normal;
   }
@@ -300,7 +300,7 @@ a:hover {
 @media (min-width: 992px) {
 
 html, body {
-  	font-family: 'PT Serif', serif;
+  	font-family: 'Lato', sans-serif;
     color: white;
   	height: 100%;
     width: 100%;
@@ -318,7 +318,7 @@ img {
 table, tr, td {
   color: black;
   font-size: 30px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 300;
   text-align: center;
   /*padding-right: 81px;*/
@@ -362,7 +362,7 @@ table, tr, td {
 }
 
 .liam {
-  font-family: 'Merriweather', serif;
+  font-family: 'Lato', sans-serif;
   background-color: #435784;
   padding-top: 35px;
   padding-left: 100px;
@@ -379,14 +379,14 @@ table, tr, td {
 }
 
 .h1 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: bolder;
   color: #C58A59;
   font-size: 45px;
 }
 
 .h2 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: black;
   font-size: 32px;
 }
@@ -394,7 +394,7 @@ table, tr, td {
 .h3 {
   color: rgb(94, 93, 93);
   font-size: 22px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 300;
   padding-left: 564px;
   margin-top: 0px;
@@ -403,7 +403,7 @@ table, tr, td {
 .h4 {
   color: rgb(94, 93, 93);
   font-size: 27px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 300;
   margin-top: 20px;
 }
@@ -423,7 +423,7 @@ table, tr, td {
   background-color: #505050;
   text-align: center;
   font-size: 15px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   padding-top: 22px;
   padding-bottom: 22px;
   color: #efefef;
@@ -439,7 +439,7 @@ a:hover {
 }
 
 .links {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 30px;
   font-weight: normal;
 }
